# OpenJK

./: .travis.yml  CMakeLists.txt  README.md  openjk-placeholder.xcf  windows-sdl-todo.txt
CMakeModules/: Copyright.txt  FindSDL2.cmake
CMakeModules/Toolchains/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
code/: CMakeLists.txt
code/cgame/: FxScheduler.cpp  cg_camera.cpp  cg_credits.cpp  cg_event.cpp  cg_players.cpp  cg_predict.cpp  cg_syscalls.cpp  cg_view.cpp  cg_weapons.cpp
code/client/: cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_keys.cpp  cl_main.cpp  cl_mp3.cpp  cl_mp3.h  cl_ui.cpp  client.h  keys.h  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_music.cpp  vmachine.h
code/game/: AI_BobaFett.cpp  AI_Default.cpp  AI_GalakMech.cpp  AI_Grenadier.cpp  AI_HazardTrooper.cpp  AI_Howler.cpp  AI_Jedi.cpp  AI_MineMonster.cpp  AI_Rancor.cpp  AI_Sniper.cpp  AI_Stormtrooper.cpp  AI_Tusken.cpp  AI_Utils.cpp  AI_Wampa.cpp  CMakeLists.txt  FighterNPC.cpp  G_Timer.cpp  NPC.cpp  NPC_behavior.cpp  NPC_combat.cpp  NPC_goal.cpp  NPC_move.cpp  NPC_reactions.cpp  NPC_senses.cpp  NPC_stats.cpp  Q3_Interface.cpp  b_local.h  bg_panimate.cpp  bg_pmove.cpp  bg_slidemove.cpp  g_active.cpp  g_cmds.cpp  g_combat.cpp  g_inventory.cpp  g_main.cpp  g_missile.cpp  g_mover.cpp  g_navigator.cpp  g_navnew.cpp  g_object.cpp  (+13 more)
code/macosx/: OpenJK.icns
code/qcommon/: cm_patch.cpp  common.cpp  cvar.cpp  files.h  files_common.cpp  files_pc.cpp  net_chan.cpp  q_shared.cpp  q_shared.h  qcommon.h  sstring.h  strip.cpp  tags.h  tri_coll_test.cpp  z_memman_pc.cpp
code/rd-common/: tr_font.cpp  tr_public.h
code/rd-vanilla/: CMakeLists.txt  G2_API.cpp  G2_bones.cpp  tr_WorldEffects.cpp  tr_bsp.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_shader.cpp  tr_sky.cpp  tr_subs.cpp
code/server/: sv_game.cpp  sv_main.cpp  sv_savegame.cpp  sv_snapshot.cpp  sv_world.cpp
code/sys/: sys_unix.cpp
code/ui/: gameinfo.h  ui_main.cpp  ui_public.h  ui_saber.cpp  ui_shared.cpp  ui_shared.h  ui_splash.cpp
code/win32/: game.rc  win_gamma.cpp  win_local.h  win_qgl.cpp  winquake.rc
codeJK2/cgame/: FxScheduler.cpp  cg_camera.cpp  cg_credits.cpp  cg_players.cpp  cg_predict.cpp  cg_syscalls.cpp  cg_view.cpp
codeJK2/game/: AI_Default.cpp  AI_Howler.cpp  AI_Jedi.cpp  AI_MineMonster.cpp  AI_Stormtrooper.cpp  AI_Utils.cpp  CMakeLists.txt  G_Timer.cpp  NPC_behavior.cpp  NPC_combat.cpp  NPC_reactions.cpp  NPC_senses.cpp  NPC_stats.cpp  Q3_Interface.cpp  b_local.h  bg_panimate.cpp  bg_slidemove.cpp  g_active.cpp  g_cmds.cpp  g_combat.cpp  g_inventory.cpp  g_main.cpp  g_misc.cpp  g_missile.cpp  g_mover.cpp  g_nav.cpp  g_navigator.h  g_navnew.cpp  g_object.cpp  g_roff.cpp  g_savegame.cpp  g_target.cpp  objectives.h  wp_saber.cpp  wp_saber.h
codeJK2/icarus/: TaskManager.cpp
codeJK2/win32/: game.rc
codemp/: CMakeLists.txt
codemp/botlib/: be_aas.h  be_aas_move.cpp  be_aas_reach.cpp  be_aas_route.cpp  be_aas_routealt.cpp  be_ai_char.cpp  be_ai_chat.cpp  be_ai_weight.cpp  be_interface.cpp
codemp/cgame/: CMakeLists.txt
codemp/client/: FXExport.cpp  cl_cgame.cpp  cl_cgameapi.cpp  cl_cin.cpp  cl_console.cpp  cl_keys.cpp  cl_main.cpp  cl_uiapi.cpp  client.h  keys.h  snd_dma.cpp  snd_local.h
codemp/game/: CMakeLists.txt
codemp/null/: null_window.cpp
codemp/qcommon/: common.cpp  files.cpp  net_ip.cpp  q_shared.c  q_shared.h  qcommon.h  tags.h  vm.cpp  z_memman_pc.cpp
codemp/rd-common/: tr_public.h
codemp/rd-dedicated/: tr_init.cpp  tr_local.h
codemp/rd-vanilla/: CMakeLists.txt  tr_init.cpp  tr_local.h  tr_subs.cpp
codemp/sdl/: sdl_glimp.cpp
codemp/server/: sv_gameapi.cpp  sv_init.cpp  sv_main.cpp
codemp/sys/: sys_unix.cpp
codemp/ui/: CMakeLists.txt  ui_local.h  ui_shared.c  ui_shared.h
codemp/win32/: cgame.rc  game.rc  openjk.rc  openjkded.rc  ui.rc  win_main.cpp
codeshared/: CMakeLists.txt  shared_docu.h
codeshared/console/: con_public.h
codeshared/console/client/: CMakeLists.txt
codeshared/console/client/unix/: con_client.cpp
codeshared/console/client/windows/: con_client.cpp
codeshared/console/dedicated/: CMakeLists.txt
codeshared/console/dedicated/unix/: con_dedicated.cpp
codeshared/console/dedicated/windows/: con_dedicated.cpp
codeshared/forward/: cl_public.h
codeshared/ghoul2/: g2_public.h
codeshared/qcommon/: q_platform.h  q_sharedtypes.h  qcommon_shared.h
codeshared/sys/: sys_common.cpp  sys_events.cpp  sys_local.h  sys_main.cpp  sys_paths.cpp  sys_public.h  sys_snapvector.cpp
codeshared/sys/unix/: sys_dynlib.cpp  sys_filesystem.cpp  sys_os.cpp  sys_time.cpp  unix_local.h
codeshared/sys/windows/: sys_dynlib.c  sys_dynlib.cpp  sys_filesystem.cpp  sys_os.cpp  sys_time.cpp  windows_local.h
codeshared/window/: CMakeLists.txt  window_clipboard.cpp  window_events.cpp  window_events_joystick.cpp  window_init.cpp  window_local.h  window_main.c  window_main.cpp  window_public.h  window_sound.cpp  window_videomode.cpp
scripts/travis/: install.sh
shared/sdl/: sdl_icon.h  sdl_input.cpp
shared/sys/: sys_main.cpp
tools/: travis-build.sh  travis-install.sh
